--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -750,72 +750,74 @@ h6,
 #header3-9 .mbr-section-title {
   color: #553982;
 }
-#ext_menu-h .hide-buttons .nav-btn {
+#ext_menu-u .hide-buttons .nav-btn {
   display: none !important;
 }
-#ext_menu-h .navbar-caption {
+#ext_menu-u .navbar-caption {
   color: #ffffff;
 }
-#ext_menu-h .navbar-toggler {
+#ext_menu-u .navbar-toggler {
   color: #ffffff;
 }
-#ext_menu-h .close-icon::before,
-#ext_menu-h .close-icon::after {
+#ext_menu-u .close-icon::before,
+#ext_menu-u .close-icon::after {
   background-color: #ffffff;
 }
-#ext_menu-h .link,
-#ext_menu-h .dropdown-item {
+#ext_menu-u .link,
+#ext_menu-u .dropdown-item {
   color: #ffffff;
 }
-#ext_menu-h .link {
+#ext_menu-u .link {
   font-size: 1.15rem;
 }
-#ext_menu-h .dropdown-item,
-#ext_menu-h .nav-dropdown-sm .link {
+#ext_menu-u .dropdown-item,
+#ext_menu-u .nav-dropdown-sm .link {
   font-size: 1.245rem;
 }
-#ext_menu-h .link:hover,
-#ext_menu-h .dropdown-item:hover,
-#ext_menu-h .link:focus,
-#ext_menu-h .dropdown-item:focus {
+#ext_menu-u .link:hover,
+#ext_menu-u .dropdown-item:hover,
+#ext_menu-u .link:focus,
+#ext_menu-u .dropdown-item:focus {
   color: #c0a375;
 }
-#ext_menu-h .link[aria-expanded="true"],
-#ext_menu-h .dropdown-menu {
+#ext_menu-u .link[aria-expanded="true"],
+#ext_menu-u .dropdown-menu {
   background: #0e0e0e;
 }
-#ext_menu-h .nav-dropdown-sm .link:focus,
-#ext_menu-h .nav-dropdown-sm .link:hover,
-#ext_menu-h .nav-dropdown-sm .dropdown-item:focus,
-#ext_menu-h .nav-dropdown-sm .dropdown-item:hover {
+#ext_menu-u .nav-dropdown-sm .link:focus,
+#ext_menu-u .nav-dropdown-sm .link:hover,
+#ext_menu-u .nav-dropdown-sm .dropdown-item:focus,
+#ext_menu-u .nav-dropdown-sm .dropdown-item:hover {
   background: #202020!important;
 }
-#ext_menu-h .navbar,
-#ext_menu-h .nav-dropdown-sm,
-#ext_menu-h .nav-dropdown-sm .link[aria-expanded="true"],
-#ext_menu-h .nav-dropdown-sm .dropdown-menu {
+#ext_menu-u .navbar,
+#ext_menu-u .nav-dropdown-sm,
+#ext_menu-u .nav-dropdown-sm .link[aria-expanded="true"],
+#ext_menu-u .nav-dropdown-sm .dropdown-menu {
   background: #282828;
 }
-#ext_menu-h .bg-color.transparent .link {
+#ext_menu-u .bg-color.transparent .link {
   color: #ffffff;
   transition: none;
 }
-#ext_menu-h .bg-color.transparent.opened .link {
+#ext_menu-u .bg-color.transparent.opened .link {
   transition: color 0.2s ease-in-out;
 }
-#ext_menu-h .bg-color.transparent.opened .link:hover,
-#ext_menu-h .bg-color.transparent.opened .link:focus {
+#ext_menu-u .bg-color.transparent.opened .link:hover,
+#ext_menu-u .bg-color.transparent.opened .link:focus {
   color: #c0a375;
 }
-#ext_menu-h .link[aria-expanded="true"],
-#ext_menu-h .dropdown-item[aria-expanded="true"] {
+#ext_menu-u .link[aria-expanded="true"],
+#ext_menu-u .dropdown-item[aria-expanded="true"] {
   color: #c0a375!important;
 }
-#features3-k H5 {
-  color: #000000;
+#header3-w .mbr-section-title,
+#header3-w .mbr-section-subtitle {
+  text-align: center;
 }
-#features3-k P {
-  color: #000000;
+#header3-x .mbr-section-title,
+#header3-x .mbr-section-subtitle {
+  text-align: center;
 }
 #ext_menu-l .hide-buttons .nav-btn {
   display: none !important;
@@ -901,72 +903,70 @@ h6,
 #form1-t .form-control-label {
   color: #232323;
 }
-#ext_menu-u .hide-buttons .nav-btn {
+#ext_menu-h .hide-buttons .nav-btn {
   display: none !important;
 }
-#ext_menu-u .navbar-caption {
+#ext_menu-h .navbar-caption {
   color: #ffffff;
 }
-#ext_menu-u .navbar-toggler {
+#ext_menu-h .navbar-toggler {
   color: #ffffff;
 }
-#ext_menu-u .close-icon::before,
-#ext_menu-u .close-icon::after {
+#ext_menu-h .close-icon::before,
+#ext_menu-h .close-icon::after {
   background-color: #ffffff;
 }
-#ext_menu-u .link,
-#ext_menu-u .dropdown-item {
+#ext_menu-h .link,
+#ext_menu-h .dropdown-item {
   color: #ffffff;
 }
-#ext_menu-u .link {
+#ext_menu-h .link {
   font-size: 1.15rem;
 }
-#ext_menu-u .dropdown-item,
-#ext_menu-u .nav-dropdown-sm .link {
+#ext_menu-h .dropdown-item,
+#ext_menu-h .nav-dropdown-sm .link {
   font-size: 1.245rem;
 }
-#ext_menu-u .link:hover,
-#ext_menu-u .dropdown-item:hover,
-#ext_menu-u .link:focus,
-#ext_menu-u .dropdown-item:focus {
+#ext_menu-h .link:hover,
+#ext_menu-h .dropdown-item:hover,
+#ext_menu-h .link:focus,
+#ext_menu-h .dropdown-item:focus {
   color: #c0a375;
 }
-#ext_menu-u .link[aria-expanded="true"],
-#ext_menu-u .dropdown-menu {
+#ext_menu-h .link[aria-expanded="true"],
+#ext_menu-h .dropdown-menu {
   background: #0e0e0e;
 }
-#ext_menu-u .nav-dropdown-sm .link:focus,
-#ext_menu-u .nav-dropdown-sm .link:hover,
-#ext_menu-u .nav-dropdown-sm .dropdown-item:focus,
-#ext_menu-u .nav-dropdown-sm .dropdown-item:hover {
+#ext_menu-h .nav-dropdown-sm .link:focus,
+#ext_menu-h .nav-dropdown-sm .link:hover,
+#ext_menu-h .nav-dropdown-sm .dropdown-item:focus,
+#ext_menu-h .nav-dropdown-sm .dropdown-item:hover {
   background: #202020!important;
 }
-#ext_menu-u .navbar,
-#ext_menu-u .nav-dropdown-sm,
-#ext_menu-u .nav-dropdown-sm .link[aria-expanded="true"],
-#ext_menu-u .nav-dropdown-sm .dropdown-menu {
+#ext_menu-h .navbar,
+#ext_menu-h .nav-dropdown-sm,
+#ext_menu-h .nav-dropdown-sm .link[aria-expanded="true"],
+#ext_menu-h .nav-dropdown-sm .dropdown-menu {
   background: #282828;
 }
-#ext_menu-u .bg-color.transparent .link {
+#ext_menu-h .bg-color.transparent .link {
   color: #ffffff;
   transition: none;
 }
-#ext_menu-u .bg-color.transparent.opened .link {
+#ext_menu-h .bg-color.transparent.opened .link {
   transition: color 0.2s ease-in-out;
 }
-#ext_menu-u .bg-color.transparent.opened .link:hover,
-#ext_menu-u .bg-color.transparent.opened .link:focus {
+#ext_menu-h .bg-color.transparent.opened .link:hover,
+#ext_menu-h .bg-color.transparent.opened .link:focus {
   color: #c0a375;
 }
-#ext_menu-u .link[aria-expanded="true"],
-#ext_menu-u .dropdown-item[aria-expanded="true"] {
+#ext_menu-h .link[aria-expanded="true"],
+#ext_menu-h .dropdown-item[aria-expanded="true"] {
   color: #c0a375!important;
 }
-#header3-w .mbr-section-title,
-#header3-w .mbr-section-subtitle {
-  text-align: center;
+#features3-10 H5 {
+  color: #000000;
 }
-#header3-x .mbr-section-title,
-#header3-x .mbr-section-subtitle {
-  text-align: center;
+#features3-10 P {
+  color: #000000;
 }
